# PearlCalculatorRS

./: .gitattributes  .gitignore  Cargo.toml  README.md  README_EN.md
.github/: cliff.toml  dependabot.yml
.github/workflows/: pages-deploy.yml  release.yml  test.yml
pearl_calculator_bridge/src/: api.rs  inputs.rs  lib.rs  outputs.rs
pearl_calculator_core/: Cargo.toml
pearl_calculator_core/examples/: usage.rs
pearl_calculator_core/src/: calculation.rs  lib.rs  physics.rs  settings.rs
pearl_calculator_core/src/calculation/: calculation.rs  inputs.rs  optimizer.rs  results.rs  simulation.rs  solver.rs  trace.rs  vectors.rs
pearl_calculator_core/src/physics/: aabb.rs  entities.rs  world.rs
pearl_calculator_core/src/physics/aabb/: aabb_box.rs
pearl_calculator_core/src/physics/constants/: constants.rs
pearl_calculator_core/src/physics/entities/: entities.rs  movement.rs  pearl_entities.rs  tnt_entities.rs
pearl_calculator_core/src/physics/world/: direction.rs  layout_direction.rs  space.rs
pearl_calculator_core/src/settings/: defaults.rs  io.rs  types.rs
pearl_calculator_core/src/utils/: utils.rs
pearl_calculator_core/tests/: common.rs  gen_snapshot.rs  regression_test.rs
pearl_calculator_core/tests/fixtures/: regression_cases.json  snapshot.json
pearl_calculator_core/tests/input_cases/: case_a.json  case_b.json  case_c.json
pearl_calculator_ui/: biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
pearl_calculator_ui/src/: App.tsx  (+2 more)
pearl_calculator_utils/: Cargo.toml
pearl_calculator_wasm/: Cargo.toml
(+120 files in other folders)
